deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: act3-kubernetes-test-app
  namespace : ngrok-ingress-controller
spec:
  selector:
    app: act3-kubernetes-test-app
  ports:
   - port: 80
     targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: act3-kubernetes-test-app
  annotations:
    k8s.ngrok.com/modules: ngrok-module-set 
  namespace: ngrok-ingress-controller
spec:
  selector:
    matchLabels:
      app: act3-kubernetes-test-app
  replicas: 3
  template:
    metadata:
      labels:
        app: act3-kubernetes-test-app
    spec:
      containers:
      - name: backend
        image: act3-kubernetes2
        ports :
          - name: http
            containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: act3-kubernetes-test-app
  namespace: ngrok-ingress-controller
spec:
  ingressClassName: ngrok
  rules:
    - host: usefully-hip-sawfly.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: act3-kubernetes-test-app
                port:
                  number: 80
